<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AjouterEtudiantActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/surname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/sexe"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/groupe"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/birthDay"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/mail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textWebEmailAddress"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/redoublant"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"/>

    <Button android:id="@+id/addStudent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ajouter"/>


</LinearLayout>